--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Valentine's Project</title>
+    <title>For u 👉👈</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="valentine.css">
 </head>
@@ -142,5 +142,6 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 
 </html>
